SUBDIRS = tutorial_basic tutorial_advanced \
	enigma_i enigma_ii enigma_iii enigma_iv enigma_v \
	enigma_vi enigma_vii enigma_viii enigma_ix enigma_x \
	enigma_esprit enigma_oxyd enigma_peroxyd enigma_oxydmagnum enigma_oxydextra \
	enigma_experimental enigma_demolevels \
	enigma_advent_10 \
	enigma_cross \
	pentomino_i \
	soko \
	patches lib

pkgdatadir = $(datadir)/@PACKAGE@/levels
pkgdata_DATA = $(wildcard $(srcdir)/*.lua $(srcdir)/*.xml)
EXTRA_DIST = $(pkgdata_DATA)
