noinst_LIBRARIES = libecl.a
AM_CFLAGS	 = @SDL_CFLAGS@
AM_CXXFLAGS 	 = @SDL_CFLAGS@

libecl_a_SOURCES = \
	IMG_SavePNG.c 			\
	IMG_SavePNG.h 			\
	SDL_gfxPrimitives.c		\
	SDL_gfxPrimitives.h		\
	SDL_gfxPrimitives_font.h	\
	SDL_rotozoom.c			\
	SDL_rotozoom.h			\
	ecl_alist.hh			\
	ecl_argp.cc 			\
	ecl_argp.hh			\
	ecl_array2.hh 			\
	ecl_buffer.cc 			\
	ecl_buffer.hh			\
	ecl_cache.hh			\
	ecl_callback.hh			\
	ecl_dict.cc 			\
	ecl_dict.hh			\
	ecl_error.hh			\
	ecl_font.cc 			\
	ecl_font.hh			\
	ecl_geom.cc 			\
	ecl_geom.hh			\
	ecl_math.cc 			\
	ecl_math.hh			\
	ecl_fwd.hh			\
	ecl_sdl.hh 			\
	ecl_sdl.cc			\
	ecl_system.hh 			\
	ecl_system.cc	 		\
	ecl_sys_localename.cc		\
	ecl_utf.hh                      \
	ecl_utf.cc                      \
	ecl_util.hh 			\
	ecl_util.cc			\
	ecl_video.cc 			\
	ecl_video.hh
