SET(LUA_SRC
    lapi.c
    lauxlib.c
    lbaselib.c
    lcode.c
    ldblib.c
    ldebug.c
    ldo.c
    ldump.c
    lfunc.c
    lgc.c
    linit.c
    liolib.c
    llex.c
    lmathlib.c
    lmem.c
    loadlib.c
    lobject.c
    lopcodes.c
    loslib.c
    lparser.c
    lstate.c
    lstring.c
    lstrlib.c
    ltable.c
    ltablib.c
    ltm.c
    lundump.c
    lvm.c
    lzio.c
    tolua_event.c
    tolua_is.c
    tolua_map.c
    tolua_push.c
    tolua_to.c
    )
set(LUA_HDR
    lapi.h
    lauxlib.h
    lcode.h
    ldebug.h
    ldo.h
    lfunc.h
    lgc.h
    llex.h
    llimits.h
    lmem.h
    lobject.h
    lopcodes.h
    lparser.h
    lstate.h
    lstring.h
    ltable.h
    ltm.h
    lua.h
    luaconf.h
    lualib.h
    lundump.h
    lvm.h
    lzio.h
    tolua++.h
    tolua_event.h
    )

#set_source_files_properties(${LUA_SRC}
#    PROPERTIES LANGUAGE CXX)

add_library(lua ${LUA_SRC} ${LUA_HDR})

