add_library(oxydlib
    Bitmap.cpp
    Bitmap.h
    DatFile.cpp
    DatFile.h
    #        EnigmaNames.cpp
    #        EnigmaNames.h
    #        extractbitmaps.cpp
    #        extractchunks.cpp
    FileUtils.cpp
    FileUtils.h
    Level.cpp
    Level.h
    OxydVersion.h
    #        printlevels.cpp
    #        printstats.cpp
    #        test.cpp
    VecUtils.cpp
    VecUtils.h
    )
