noinst_LIBRARIES = libpx.a
AM_CFLAGS	 = @SDL_CFLAGS@
AM_CXXFLAGS 	 = @SDL_CFLAGS@

libpx_a_SOURCES = \
	IMG_SavePNG.c IMG_SavePNG.h \
	SDL_gfxPrimitives.c		\
	SDL_gfxPrimitives.h		\
	SDL_gfxPrimitives_font.h	\
	SDL_rotozoom.c			\
	SDL_rotozoom.h			\
	alist.hh			\
	argp.cc argp.hh			\
	array2.hh 			\
	buffer.cc buffer.hh		\
	cache.hh			\
	callback.hh			\
	dict.cc dict.hh			\
	error.hh			\
	font.cc font.hh			\
	geom.cc geom.hh			\
	math.cc math.hh			\
	px.hh				\
	pxfwd.hh			\
	sdl.hh sdl.cc			\
	system.hh system_unix.cc 	\
	sys_localename.cc		\
	tools.hh tools.cc			\
	video.cc video.hh
