SUBDIRS = skinner_microban01 \
          skinner_microban02 \
          skinner_microban03 \
          skinner_microban04 \
          skinner_microban05 \
          skinner_sasquatch01 \
          skinner_sasquatch02 \
          skinner_sasquatch03 \
          skinner_sasquatch04 \
          skinner_sasquatch05 \
          skinner_sasquatch06 \
          skinner_sasquatch07 \
          skinner_sasquatch08 \
          skinner_sasquatch09 \
          skinner_sasquatch10 \
          skinner_sasquatch11 \
          skinner_sasquatch12

pkgdatadir = $(datadir)/@PACKAGE@/levels/soko
pkgdata_DATA = $(wildcard $(srcdir)/*.txt $(srcdir)/*.xml)
EXTRA_DIST = $(pkgdata_DATA)
