pkgdatadir = $(datadir)/@PACKAGE@/soundsets/enigma
pkgdata_DATA = ballcollision.wav \
boing.wav \
boink.wav \
drip.wav \
drown.wav \
explosion0.wav \
explosion1.wav \
explosion2.wav \
fart.wav \
invrotate.wav \
it-triggerdown.wav \
it-triggerup.wav \
menuexit.wav \
menumove.wav \
menuok.wav \
menustop.wav \
menuswitch.wav \
pickup.wav \
shatter.wav \
st-coinslot.wav \
st-fakeoxyd.wav \
st-laser.wav \
st-magic.wav \
st-metal.wav \
st-mirrorturn.wav \
st-move.wav \
st-oxydopen.wav \
st-oxydopened.wav \
st-stone.wav \
st-switch.wav \
st-thud.wav \
swamped.wav \
switch.wav

EXTRA_DIST = $(pkgdata_DATA)
